# budgit_rs

./: Cargo.toml
assets/: manifest.webmanifest  theme.css
html/: add-maincat.liquid  add-subcat.liquid  add-transact.liquid  index.liquid  maincat-detail.liquid  theme.liquid
src/: data.rs  db.rs  main.rs
